architecture segregation